--- a/package.json
+++ b/package.json
@@ -2,15 +2,35 @@
   "name": "sls-multi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run clean && tsc",
+    "clean": "del ./build/*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/concurrently": "^6.0.1",
     "@types/express": "^4.17.11",
-    "express": "^4.17.1"
+    "@types/express-http-proxy": "^1.6.1",
+    "child_process": "^1.0.2",
+    "concurrently": "^6.2.0",
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
+    "fs": "0.0.1-security",
+    "http-proxy-middleware": "^2.0.0",
+    "path": "^0.12.7",
+    "yaml": "^1.10.2"
+  },
+  "bin": {
+    "say-cli": "./build/index.js"
+  },
+  "devDependencies": {
+    "del-cli": "^3.0.1"
   }
 }
