change npm prefix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@edis/sls-multi-gateways",
+  "name": "sls-multi-gateways",
   "description": "",
   "version": "1.0.0",
   "main": "./build/index.js",
