--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "clean": "del ./build/*",
-    "pub": "npm version patch && npm run build && npm publish"
+    "pub": "npm version patch && npm run build && npm publish",
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@types/concurrently": "^6.0.1",
     "@types/express": "^4.17.11",
     "@types/express-http-proxy": "^1.6.1",
+    "@types/yargs": "^17.0.0",
     "child_process": "^1.0.2",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
@@ -26,12 +28,15 @@
     "fs": "0.0.1-security",
     "http-proxy-middleware": "^2.0.0",
     "path": "^0.12.7",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "yargs": "^17.0.1"
   },
   "bin": {
-    "sls-multi-gateways": "build/index.js"
+    "sls-multi-gateways-dev": "build/index.js"
   },
   "devDependencies": {
-    "del-cli": "^3.0.1"
+    "del-cli": "^3.0.1",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
