--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/concurrently": "^6.0.1",
     "@types/express": "^4.17.11",
     "@types/express-http-proxy": "^1.6.1",
-    "@types/yargs": "^17.0.0",
     "child_process": "^1.0.2",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
@@ -28,8 +27,7 @@
     "fs": "0.0.1-security",
     "http-proxy-middleware": "^2.0.0",
     "path": "^0.12.7",
-    "yaml": "^1.10.2",
-    "yargs": "^17.0.1"
+    "yaml": "^1.10.2"
   },
   "bin": {
     "sls-multi-gateways-dev": "build/index.js"
