--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sls-multi-gateways",
   "description": "",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "files": [
@@ -30,7 +30,7 @@
     "yaml": "^1.10.2"
   },
   "bin": {
-    "sls-multi-gateways-dev": "build/index.js"
+    "sls-multi-gateways": "build/index.js"
   },
   "devDependencies": {
     "del-cli": "^3.0.1",
